Issue #2152521 by prashantgoel, LewisNyman, sghoweri, mrjmd, LoMo, JamesLefrère, Manjit.Singh: Fixed User login page looks cramped on mobile.

--- a/core/themes/bartik/css/colors.css
+++ b/core/themes/bartik/css/colors.css
@@ -17,7 +17,7 @@ body {
 }
 .tabs ul.primary li.active a {
   background-color: #ffffff;
-  border-bottom: 1px solid #ffffff;
+  border-bottom-color: #ffffff;
 }
 #header {
   background-color: #1d84c3;
